Bug 283223: don't create a dummy account if we nsMsgAccountManager::GetAccount doesn't find an existing one. r=bienvenu.